Started implementing instructions!
next is to continue adding instructions, update the mapping, and implement time accurate cpu clocks

Signed-off-by: John Forbes <thatbotjohn@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
-cmake_minimum_required(VERSION 3.0)
-project(sneks VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.5)
+project(sneks VERSION 0.1.0 LANGUAGES CXX)
 
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/lib -Wl,-rpath,/usr/local/lib -Wl,--enable-new-dtags -lSDL2 -pthread")
 
 
